--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,32 @@
 h1, h3 {
     text-align: center;
 }
-.col-container{
-    display: table;
-    width: 100%; 
+.row{
+    display: flex;
     height: 100%;
 }
 .col{
-    /* display: table-cell; */
-    width: 50%;
+    flex: 50%;
+    padding: 10px;
+    height: 600px;
 }
+#leftCol{
+    margin-top: 100px;
+}
+#walpaper{
+    background-image: url("../Pictures/flowers-gf394f1f40_640.png");
+}
+/* #flowers{
+    background-image: url("../Pictures/png-g811f6fb40_640.png");
+    background-size: 50%;
+    animation: rotateFlowers 50s infinite linear;
+}
+
+@keyframes rotateFlowers {
+from {
+    transform: rotate(0deg);
+}
+to {
+    transform: rotate(359deg);
+}
+} */
