--- a/CSS/memberStyles.css
+++ b/CSS/memberStyles.css
@@ -2,7 +2,29 @@
     text-align: center;
     margin-top: 20px;
 }
+#show{
+    background-color: #023020;
+    color:white;
+    border-style: hidden;
+    height: 40px;
+    width: 180px;
+    margin-top:30px;
+}
+#show:hover{
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
 #tbl{
     margin-left: auto;
     margin-right: auto;
+    margin-top: 50px;
+    width: 500px;
+}
+th, td {
+    border: 1px solid #023020;
+    width: 50%;
+    font-size: 20px;
+}
+th{
+    background-color: #023020;
+    color: white;
 }
